--- a/outdoorApp/package.json
+++ b/outdoorApp/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@expo/samples": "~36.0.0",
     "@expo/vector-icons": "^10.0.6",
+    "@react-navigation/native": "^5.0.9",
     "@react-navigation/web": "~1.0.0-alpha.9",
     "expo": "~36.0.0",
     "expo-asset": "~8.0.0",
@@ -22,15 +23,17 @@
     "expo-web-browser": "~8.0.0",
     "express": "^4.17.1",
     "mongodb": "^3.5.3",
-    "react": "~16.9.0",
-    "react-dom": "~16.9.0",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.5.0",
+    "react-native-navigation": "^6.1.1",
     "react-native-reanimated": "~1.4.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-web": "~0.11.7",
     "react-navigation": "~4.0.10",
+    "react-navigation-hooks": "^1.1.0",
     "react-navigation-stack": "~1.10.3",
     "react-navigation-tabs": "~2.6.2",
     "yarn": "^1.22.0"
