--- a/outdoorApp/package.json
+++ b/outdoorApp/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node ./bin/www",
     "client": "cd client && npm start",
-    "dev": "concurrently \"npm start \" \"npm run client\""
+    "dev": "concurrently \"npm start \" \"npm run client\"",
+    "test": "jest"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -16,6 +17,7 @@
     "express": "^4.16.4",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "jest": "^25.3.0",
     "mongodb": "^3.5.4",
     "mongoose": "^5.9.4",
     "mongoose-auto-increment": "^5.0.1",
