--- a/outdoorApp/package.json
+++ b/outdoorApp/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "nodemon ./bin/www",
     "client": "cd client && npm start",
     "dev": "concurrently \"npm start \" \"npm run client\"",
     "test": "jest"
