--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,9 @@ branches:
 cache:
     directories:
     - node_modules
+before_install:
+- npm update
+install:
+- npm install
 script:
     - ./travis.sh
