--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -11,7 +11,29 @@ on:
 
 jobs:
   build:
+    name: build and test
+    runs-on: ubuntu-latest
+    
+    defaults:
+      run:
+        shell: bash
+        working-directory: outdoorApp/client
 
+    strategy:
+      matrix:
+        node-version: [10.x, 12.x]
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+    - run: npm ci
+    - run: npm run build --if-present
+    - run: npm test
+  lint:
+    name: lint
     runs-on: ubuntu-latest
     
     defaults:
@@ -32,5 +54,5 @@ jobs:
     - run: npm ci
     - name: ESLint Action
       uses: hallee/eslint-action@1.0.1
-    - run: npm run build --if-present
-    - run: npm test
+      with:
+        working-directory: outdoorApp/client
