--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -27,8 +27,8 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
-  lint:
-    name: lint
+  eslint:
+    name: eslint job
     runs-on: ubuntu-latest
 
     strategy:
@@ -42,5 +42,4 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
-    - name: ESLint Action
-      uses: hallee/eslint-action@1.0.1
+    - uses: stefanoeb/eslint-action@1.0.2
