--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "proxy": "http://localhost:9000",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -7,8 +6,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "server": "nodemon ./api/bin/www",
-    "dev": "concurrently \"npm start\" \"npm server\" "
+    "cypress:open": "cypress open"
   },
   "jest": {
     "preset": "jest-expo"
@@ -46,6 +44,7 @@
   "devDependencies": {
     "@babel/core": "^7.8.4",
     "babel-preset-expo": "~8.0.0",
+    "cypress": "^4.5.0",
     "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.20.2",
