--- a/.github/workflows/matt-test.yml
+++ b/.github/workflows/matt-test.yml
@@ -5,45 +5,11 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ master ]
+    branches: [ matt ]
   pull_request:
-    branches: [ master ]
+    branches: [ matt ]
 
 jobs:
-  eslint:
-    name: eslint job
-    runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [10.x, 12.x]
-
-    steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - run: npm ci
-    - uses: stefanoeb/eslint-action@1.0.2
-
-  build:
-    name: build and test
-    runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [10.x, 12.x]
-
-    steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
   cypress:
     name: test cypress
     runs-on: ubuntu-latest
