--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -59,6 +59,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
-    - name: Cypress.io
-      uses: cypress-io/github-action@v1.16.1
+    - run: npm run web:start
+    - run: npm run web:e2e:ci
+    - run: npm run web:e2e
 
