--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "cypress:open": "cypress open"
+    "cypress:open": "cypress open",
+    "web:start": "expo start --web-only",
+    "web:e2e:ci": "cypress run",
+    "web:e2e": "start-server-and-test web:start 19006 web:e2e:ci"
   },
   "jest": {
     "preset": "jest-expo"
