--- a/.github/workflows/matt-test.yml
+++ b/.github/workflows/matt-test.yml
@@ -25,6 +25,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
+    - run: npm install expo
     - run: npm run web:start
     - run: npm run web:e2e:ci
     - run: npm run web:e2e
