--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -44,6 +44,7 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
+
   cypress:
     name: test cypress
     runs-on: ubuntu-latest
@@ -59,5 +60,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
+    - run: npm install expo -g
     - run: npm run web:e2e
 
