--- a/.github/workflows/matt-test.yml
+++ b/.github/workflows/matt-test.yml
@@ -21,10 +21,14 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
+    - uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm ci
-    - run: npm install expo -g
+    - uses: expo/expo-github-action@v5
+      with:
+        expo-version: 3.x
+        expo-username: ${{ secrets.EXPO_CLI_USERNAME }}
+        expo-password: ${{ secrets.EXPO_CLI_PASSWORD }}
+    - run: npm ci    
     - run: npm run web:e2e
 
