--- a/.github/workflows/matt-test.yml
+++ b/.github/workflows/matt-test.yml
@@ -30,5 +30,5 @@ jobs:
         expo-password: ${{ secrets.EXPO_CLI_PASSWORD }}
     - run: npm ci    
     - run: npm web:start
-    - run: npm run web:e2e
+    - run: npm run web:e2e:ci
 
