--- a/.github/workflows/matt-test.yml
+++ b/.github/workflows/matt-test.yml
@@ -29,6 +29,6 @@ jobs:
         expo-username: ${{ secrets.EXPO_CLI_USERNAME }}
         expo-password: ${{ secrets.EXPO_CLI_PASSWORD }}
     - run: npm ci    
-    - run: npm web:start
-    - run: npm run web:e2e:ci
+    - run: npm run web:start
+    - run: npm run web:e2e
 
