--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "web": "expo start --web",
     "eject": "expo eject",
     "cypress:open": "cypress open",
-    "web:start": "expo start --web-only",
     "web:e2e:ci": "cypress run --record --key 7770fbfa-7510-40cf-a17e-d217a16ca9d4",
-    "web:e2e": "start-server-and-test web:start http://localhost:19006 web:e2e:ci"
+    "web:e2e": "start-server-and-test web http://localhost:19006 web:e2e:ci"
   },
   "jest": {
     "preset": "jest-expo"
