--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.17.1",
     "hammerjs": "^2.0.8",
     "mongodb": "^3.5.4",
+    "native-base": "^2.13.12",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
