--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -44,3 +44,26 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm test
+  publish:
+    name: expo publish
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [10.x, 12.x]
+
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+    - uses: expo/expo-github-action@v5
+      with:
+        expo-version: 3.x
+        expo-username: ${{ secrets.EXPO_CLI_USERNAME }}
+        expo-password: ${{ secrets.EXPO_CLI_PASSWORD }}
+    - run: npm ci    
+    - run: npm run build --if-present
+    - run: npm test
+    - uses: stefanoeb/eslint-action@1.0.2
+    - run: expo publish
