--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-maps": "^0.27.1",
     "react-native-reanimated": "~1.4.0",
     "react-native-screens": "2.0.0-alpha.12",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-star-rating": "^1.1.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "~4.0.10",
