--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-asset": "~8.0.0",
     "expo-constants": "~8.0.0",
     "expo-font": "~8.0.0",
+    "expo-image-picker": "~8.0.1",
     "expo-web-browser": "~8.0.0",
     "express": "^4.17.1",
     "form-data": "^3.0.0",
@@ -36,9 +37,12 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.5.0",
-    "react-native-maps": "^0.27.1",
+    "react-native-image-slider-box": "^1.0.12",
+    "react-native-maps": "^0.26.1",
     "react-native-reanimated": "~1.4.0",
     "react-native-screens": "2.0.0-alpha.12",
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-star-rating": "^1.1.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "~4.0.10",
     "react-navigation-hooks": "^1.1.0",
